Alignment issue firefox related css changes

--- a/resident-ui/src/styles.css
+++ b/resident-ui/src/styles.css
@@ -69,7 +69,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 100rem;
   margin: 0;
   font-family: "source_sans_pro_lightregular", Helvetica, sans-serif;
   /* font-family: 'Roboto', 'Helvetica Neue', sans-serif; */
@@ -491,4 +491,8 @@ button{
 
 ::-webkit-scrollbar{
    width: 5px;
+}
+
+.cdk-overlay-backdrop{
+  height: 100rem !important;
 }
